--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.45.1",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.24",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.14",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -29,10 +34,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
